Allocated all of the code to various load segments (the same as was being allocated by the backup.link script for Apple's LINKIIGS.  The idea is to get the Byteworks linker to do the same thing, and hopefully at the same time, get it to respect the stacksize directive so that the app doesn't crash all over the place.
This is just a precursor to some serious refactoring to reduce the ridiculous stack usage.

--- a/makefileiigs
+++ b/makefileiigs
@@ -168,12 +168,15 @@ obj/backup.a
     obj/backevent.a
         { 
         	compile backup.pas keep=obj/$
+			move obj/backup.a obj/backup.b
+			move obj/backup.root obj/backup.a
+			crunch obj/backup
 		}
 	
 obj/ezbackup
     obj/backup.a
         { 
-        	linkbackup 
+        	linkiigs < backup.link
         	delete ez.backup }
 
 ez.backup
